// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds \`dataTest\` prop 1`] = `
<Dropdown
  dataTest="Duck"
  onChange={[Function]}
  value="goose"
>
  <div
    className="root"
  >
    <select
      className="select selectStateDefault selectSizeLarge"
      data-test="Duck"
      disabled={false}
      onChange={[Function]}
      onClick={[Function]}
      required={false}
      value="goose"
    />
    <svg
      className="caret"
      fill="none"
      height="18"
      stroke="#2f3033"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="3"
      viewBox="0 0 24 24"
      width="18"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
</Dropdown>
`;

exports[`adds \`disabled\` attribute 1`] = `
<Dropdown
  isDisabled={true}
  onChange={[Function]}
  value="goose"
>
  <div
    className="root"
  >
    <select
      className="select selectStateDisabled selectSizeLarge"
      disabled={true}
      onChange={[Function]}
      onClick={[Function]}
      required={false}
      value="goose"
    />
    <svg
      className="caret"
      fill="none"
      height="18"
      stroke="#d3d4d5"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="3"
      viewBox="0 0 24 24"
      width="18"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
</Dropdown>
`;

exports[`adds \`id\` attribute 1`] = `
<Dropdown
  id="Goose"
  onChange={[Function]}
  value="goose"
>
  <div
    className="root"
  >
    <select
      className="select selectStateDefault selectSizeLarge"
      disabled={false}
      id="Goose"
      onChange={[Function]}
      onClick={[Function]}
      required={false}
      value="goose"
    />
    <svg
      className="caret"
      fill="none"
      height="18"
      stroke="#2f3033"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="3"
      viewBox="0 0 24 24"
      width="18"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
</Dropdown>
`;

exports[`adds \`name\` HTML attribute 1`] = `
<Dropdown
  name="duck"
  onChange={[Function]}
  value="goose"
>
  <div
    className="root"
  >
    <select
      className="select selectStateDefault selectSizeLarge"
      disabled={false}
      name="duck"
      onChange={[Function]}
      onClick={[Function]}
      required={false}
      value="goose"
    />
    <svg
      className="caret"
      fill="none"
      height="18"
      stroke="#2f3033"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="3"
      viewBox="0 0 24 24"
      width="18"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
</Dropdown>
`;

exports[`adds \`required\` attribute 1`] = `
<Dropdown
  isRequired={true}
  onChange={[Function]}
  value="goose"
>
  <div
    className="root"
  >
    <select
      className="select selectStateDefault selectSizeLarge"
      disabled={false}
      onChange={[Function]}
      onClick={[Function]}
      required={true}
      value="goose"
    />
    <svg
      className="caret"
      fill="none"
      height="18"
      stroke="#2f3033"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="3"
      viewBox="0 0 24 24"
      width="18"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
</Dropdown>
`;

exports[`renders an error state with \`hasError\` 1`] = `
<Dropdown
  hasError={true}
  onChange={[Function]}
  value="goose"
>
  <div
    className="root"
  >
    <select
      className="select selectStateError selectSizeLarge"
      disabled={false}
      onChange={[Function]}
      onClick={[Function]}
      required={false}
      value="goose"
    />
    <svg
      className="caret"
      fill="none"
      height="18"
      stroke="#ff5a5f"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="3"
      viewBox="0 0 24 24"
      width="18"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
</Dropdown>
`;

exports[`renders options that are passed in as \`children\` 1`] = `
<Dropdown
  onChange={[Function]}
  value="goose"
>
  <div
    className="root"
  >
    <select
      className="select selectStateDefault selectSizeLarge"
      disabled={false}
      onChange={[Function]}
      onClick={[Function]}
      required={false}
      value="goose"
    >
      <option>
        New York
      </option>
      <option>
        California
      </option>
    </select>
    <svg
      className="caret"
      fill="none"
      height="18"
      stroke="#2f3033"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="3"
      viewBox="0 0 24 24"
      width="18"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
</Dropdown>
`;

exports[`uses \`value\` as the selected option 1`] = `
<div
  class="root"
>
  <select
    class="select selectStateDefault selectSizeLarge"
  >
    <option
      value="ny"
    >
      New York
    </option>
    <option
      selected=""
      value="ca"
    >
      California
    </option>
  </select>
  <svg
    class="caret"
    fill="none"
    height="18"
    stroke="#2f3033"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="3"
    viewBox="0 0 24 24"
    width="18"
  >
    <polyline
      points="6 9 12 15 18 9"
    />
  </svg>
</div>
`;
